--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
     "react-scripts-ts": "3.1.0",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "styled-reset": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
