--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.0",
     "apollo-boost": "^0.4.7",
     "graphql": "^14.6.0",
@@ -10,6 +11,7 @@
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts-ts": "3.1.0",
     "styled-components": "^5.0.1",
     "styled-reset": "^4.1.0"
