--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "test": "react-scripts-ts test --env=jsdom",
         "eject": "react-scripts-ts eject",
         "precodegen": "npx apollo-codegen introspect-schema http://localhost:4000/graphql --output schema.json",
-        "codegen": "npx apollo codegen:generate src/types/api.d.ts --queries=src/**/*.queries.ts --addTypename --localSchemaFile=schema.json --target typescript --outputFlat"
+        "codegen": "npx apollo codegen:generate src/types/api.d.ts --queries='src/**/!(*.local).ts' --addTypename --localSchemaFile=schema.json --target typescript --outputFlat"
     },
     "devDependencies": {
         "@types/jest": "^25.1.2",
