--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@types/react-router-dom": "^5.1.3",
+        "@types/react-sidebar": "^3.0.0",
         "@types/styled-components": "^5.0.0",
         "apollo-boost": "^0.4.7",
         "graphql": "^14.6.0",
@@ -15,6 +16,7 @@
         "react-helmet": "^5.2.1",
         "react-router-dom": "^5.1.2",
         "react-scripts-ts": "3.1.0",
+        "react-sidebar": "^3.0.2",
         "react-toastify": "^5.5.0",
         "styled-components": "^5.0.1",
         "styled-reset": "^4.1.0"
