--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@types/react-sidebar": "^3.0.0",
         "@types/styled-components": "^5.0.0",
         "apollo-boost": "^0.4.7",
+        "axios": "^0.19.2",
         "graphql": "^14.6.0",
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
