--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@types/googlemaps": "^3.39.4",
         "@types/react-router-dom": "^5.1.3",
         "@types/react-sidebar": "^3.0.0",
         "@types/styled-components": "^5.0.0",
         "apollo-boost": "^0.4.7",
         "axios": "^0.19.2",
+        "google-maps-react": "^2.0.6",
         "graphql": "^14.6.0",
         "prop-types": "^15.7.2",
         "react": "^16.12.0",
